# rust-wgpu-viz-lab

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
content/docs/: interactive-particles.md  introduction.md  line-chart.md  particles.md  triangle.md  webgpu-basics.md
crates/viz-core/: Cargo.toml  README.md
crates/viz-core/src/: gpu.rs  interactive_particles.rs  lib.rs  line_chart.rs  particles.rs  triangle.rs
frontend/: app.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
frontend/app/components/: WgpuCanvas.tsx
frontend/app/routes/: __root.tsx  index.tsx
frontend/app/routes/docs/: $slug.tsx
frontend/src/: demos.ts  index.css  main.tsx
frontend/src/components/: DemoCard.tsx  WgpuCanvas.tsx
frontend/src/routes/: __root.tsx  demos.$slug.tsx  docs.$slug.tsx  index.tsx
frontend/src/wasm/: viz_core.d.ts  viz_core.js  viz_core_bg.wasm  viz_core_bg.wasm.d.ts
